<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="283dp"
        android:layout_marginRight="283dp"
        android:layout_marginBottom="368dp"
        android:text="@string/food" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="107dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="285dp"
        android:layout_marginRight="285dp"
        android:layout_marginBottom="322dp"
        android:text="@string/groce" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="107dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="286dp"
        android:layout_marginRight="286dp"
        android:layout_marginBottom="272dp"
        android:text="@string/sundry" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="289dp"
        android:layout_marginRight="289dp"
        android:layout_marginBottom="217dp"
        android:text="@string/educa" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="105dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="287dp"
        android:layout_marginRight="287dp"
        android:layout_marginBottom="160dp"
        android:text="@string/petrol" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="287dp"
        android:layout_marginRight="287dp"
        android:layout_marginBottom="98dp"
        android:text="@string/loan" />

    <TextView
        android:id="@+id/mfood"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginBottom="370dp"
        android:ems="10"
        android:inputType="number"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/mgroce"
        android:layout_width="160dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="323dp"
        android:ems="10"
        android:inputType="number"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/msundry"
        android:layout_width="155dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="269dp"
        android:ems="10"
        android:inputType="number"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/mloan"
        android:layout_width="159dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="94dp"
        android:ems="10"
        android:inputType="number"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/mpetrol"
        android:layout_width="156dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="156dp"
        android:ems="10"
        android:inputType="number"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/meduca"
        android:layout_width="158dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="217dp"
        android:ems="10"
        android:inputType="number"
        tools:ignore="TextViewEdits" />

    <EditText
        android:id="@+id/mdate"
        android:layout_width="136dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        android:layout_marginBottom="419dp"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="223dp"
        android:layout_marginRight="223dp"
        android:layout_marginBottom="480dp"
        android:text="@string/mmonth" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="166dp"
        android:layout_marginBottom="480dp"
        android:text="@string/ymonth" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="119dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="266dp"
        android:layout_marginRight="266dp"
        android:layout_marginBottom="33dp"
        android:text="@string/total" />

    <TextView
        android:id="@+id/mtotal"
        android:layout_width="194dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="37dp" />


</RelativeLayout>