<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/textView"
        android:layout_width="116dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="285dp"
        android:layout_marginRight="285dp"
        android:layout_marginBottom="395dp"
        android:text="@string/food" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="114dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="287dp"
        android:layout_marginRight="287dp"
        android:layout_marginBottom="346dp"
        android:text="@string/groce" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="113dp"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="278dp"
        android:layout_marginRight="278dp"
        android:layout_marginBottom="303dp"
        android:text="@string/sundry" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="111dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="286dp"
        android:layout_marginRight="286dp"
        android:layout_marginBottom="251dp"
        android:text="@string/educa" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="112dp"
        android:layout_height="52dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="280dp"
        android:layout_marginRight="280dp"
        android:layout_marginBottom="196dp"
        android:text="@string/petrol" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="103dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="291dp"
        android:layout_marginRight="291dp"
        android:layout_marginBottom="150dp"
        android:text="@string/loan" />

    <TextView
        android:id="@+id/dfood"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="399dp"
        android:ems="10"
        android:inputType="number"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/dgroce"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="352dp"
        android:ems="10"
        android:inputType="number"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/dsundry"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="298dp"
        android:ems="10"
        android:inputType="number"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/dloan"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="153dp"
        android:ems="10"
        android:inputType="number"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/dpetrol"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="206dp"
        android:ems="10"
        android:inputType="number"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/deduca"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="255dp"
        android:ems="10"
        android:inputType="number"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="112dp"
        android:layout_height="47dp"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="282dp"
        android:layout_marginRight="282dp"
        android:layout_marginBottom="-49dp"
        android:text="@string/total" />

    <TextView
        android:id="@+id/dtotal"
        android:layout_width="197dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="99dp"
        android:ems="10"
        android:inputType="number"
        tools:ignore="TextViewEdits" />

    <EditText
        android:id="@+id/ddate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="448dp"
        android:ems="10"
        android:inputType="date"
        android:maxLength="8"/>

    <Button
        android:id="@+id/delbut"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="284dp"
        android:layout_marginRight="284dp"
        android:layout_marginBottom="32dp"
        android:onClick="ondelClick"
        android:text="@string/delete"
        android:textColor="#FF0000" />

</RelativeLayout>